[gd_scene load_steps=10 format=3 uid="uid://cqasqdym0qffg"]

[ext_resource type="Texture2D" uid="uid://c75tfjlibrm1l" path="res://assets/game/objects/basic_grass_biom_things.png" id="1_a8qts"]
[ext_resource type="Shader" uid="uid://cennscj7cf33n" path="res://scenes/objects/trees/small_tree_shake.gdshader" id="1_w057i"]
[ext_resource type="Script" uid="uid://d26b1046dvl8w" path="res://scenes/objects/trees/small_tree.gd" id="2_g5iuu"]
[ext_resource type="PackedScene" uid="uid://b2182vr4ul1fa" path="res://scenes/components/hurt_component.tscn" id="2_xyb6m"]
[ext_resource type="PackedScene" uid="uid://bvlxsewmqecu0" path="res://scenes/components/damage_component.tscn" id="3_au4vd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_skbjc"]
resource_local_to_scene = true
shader = ExtResource("1_w057i")
shader_parameter/shake_intensity = 0.0
shader_parameter/shake_speed = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xyb6m"]
atlas = ExtResource("1_a8qts")
region = Rect2(0, 0, 16, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_a8qts"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyb6m"]
size = Vector2(8, 21)

[node name="SmallTree" type="Sprite2D"]
material = SubResource("ShaderMaterial_skbjc")
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_xyb6m")
script = ExtResource("2_g5iuu")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_a8qts")

[node name="HurtComponent" parent="." instance=ExtResource("2_xyb6m")]
tool = 1

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_xyb6m")
debug_color = Color(0.8372975, 0.22840345, 0.77292895, 0.41960785)

[node name="DamageComponent" parent="." instance=ExtResource("3_au4vd")]
max_damage = 4

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
